Fix T43531: Wrong object center-dot color

Write objects center point to the nearest depth.